syntax = "proto3";

package root;


message AccountRequest {
  string username = 1;
  string password = 2;
}

message AccountResponse {
  string id = 1;
  string username = 2;
}

service Identity {
  rpc CreateAccount(AccountRequest) returns (AccountResponse) {}
}
